feat:完成所有表单

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
+<!--
+ * @Descripttion: 
+ * @Author: Yi Yunwan
+ * @Date: 2021-03-10 11:28:58
+ * @LastEditors: Yi Yunwan
+ * @LastEditTime: 2021-03-16 16:02:24
+-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>TakTak活动管理系统</title>
+    <script src="/public/js/config.js"></script>
   </head>
   <body>
     <div id="app"></div>
